--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <head>
          <h1>
              Hello
-    </h1>
+<img src="https://avatars.githubusercontent.com/u/86059616?v=4">
+
     
         <title>My awesome web page</title>
     </head>
