--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
-<html>
-    <head>
-         <h1>
-             Hello
-<img src="https://avatars.githubusercontent.com/u/86059616?v=4">
+img src-"https://avatars.githubuser content.com/u/859479842v
+<titlewy awesome web page</title>
+</head
 
-    
-        <title>My awesome web page</title>
-    </head>
 
-  <body>
-    Hello there, awesome person! 
+<body>
+Hello there, awesome person!
+<ol>
+<li>This</li>
+<li>Is an/li>
+<li>ordered list</11
+</ol>
+<ul>
+<li>This</li>
+<li>Is anc/li>
+<li>Unordered list</li>
+</ul>
+
   </body>
+
 
 </html>
