--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
-img src-"https://avatars.githubuser content.com/u/859479842v
-<titlewy awesome web page</title>
-</head
-
-
+<html>
+<head>
+<link rel-"stylesheet " href="style.css">
+<h1>
+HEADER
+< imgsrc="https://avatars .githubusercontent.com85947984?v-4">
+<title> my awesome web page</title>
+</head>
 <body>
 Hello there, awesome person!
 <ol>
 <li>This</li>
-<li>Is an/li>
-<li>ordered list</11
+<li>Is an</li>
+liny favorite site is <a href-"https://github.com">6itHub</a» I </li»
 </ol>
 <ul>
 <li>This</li>
-<li>Is anc/li>
-<li>Unordered list</li>
+<li>Is an</li>
+<liunordered list</li>
 </ul>
-
-  </body>
-
-
+</body>
 </html>
